--- a/Metropol-website/public/index.html
+++ b/Metropol-website/public/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/metropol-logo/Metropol_Logo_Icon_Black.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  
+  <link rel="icon" href="%PUBLIC_URL%/metropol-logo/Favicon.png" media="(prefers-color-scheme: light)" />
+  <link rel="icon" href="%PUBLIC_URL%/metropol-logo/Favicon (Dark Mode).png" media="(prefers-color-scheme: dark)" />
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  
+  <title>Metropol</title>
+</head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
