--- a/Metropol-website/public/index.html
+++ b/Metropol-website/public/index.html
@@ -17,7 +17,8 @@
 </head>
 
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript> We're better in person.
+        A hundred things are happening in London right now..</noscript>
     <div id="root"></div>
   </body>
 </html>
