--- a/Metropol-website/public/index.html
+++ b/Metropol-website/public/index.html
@@ -11,8 +11,22 @@
   <meta name="description" content="We're better in person.
         A hundred things are happening in London right now.." />
   
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/metropol-logo/Favicon.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+
+  <meta property="og:title" content="Metropol" />
+  <meta property="og:description" content="We're better in person. A hundred things are happening in London right now." />
+  <meta property="og:image" content="%PUBLIC_URL%/metropol-logo/Favicon.png" />
+  <meta property="og:url" content="https://metropol.world/" />
+  <meta property="og:type" content="website" />
+
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Metropol" />
+  <meta name="twitter:description" content="We're better in person. A hundred things are happening in London right now." />
+  <meta name="twitter:image" content="%PUBLIC_URL%/metropol-logo/Favicon.png" />
+
   
   <title>Metropol</title>
 </head>
